# fastapi_clients

./: docker-compose.yml  pyproject.toml
project/: Dockerfile  pyproject.toml
project/app/: crud.py  database.py  exceptions.py  main.py  models.py  schemas.py  validators.py
