[tool.poetry]
name = "fastapi-clients"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pandas = "^2.1.0"
numpy = "^1.25.2"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
alembic = "^1.12.0"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
